# diploma

./: README.md
k8s/dev/app/cluster-issuer/: dev-issuer.yaml
k8s/dev/app/deployments/: resources-deployment.yaml
k8s/dev/app/ingress/: nginx-ingress.yaml
service/: .env.docker-compose  CHANGELOG.md  Makefile  README.md  alembic.ini  main.py  pyproject.toml  setup.cfg
service/alembic/: env.py
service/app/: config.py  settings.py
service/app/controllers/celery_tasks/: coinquotes_worker.py
service/app/controllers/db_controllers/: coinquotes_controller.py
service/app/controllers/exeptions/: exeptions.py
service/app/models/: base_model.py  session.py
service/app/utils/: exeption_handlers.py  keycloak_handler.py  minio_handler.py  s3_handler.py  text_formatter.py  user_auth_handlers.py
service/app/views/api_models/: base_api_model.py  coinquotes_api_models.py
service/app/views/api_routes/coinquotes_routes/: coinquotes_routes.py
service/docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
