[tool.poetry]
name = "resources-hedge-fund"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
fastapi = {extras = ["all"], version = "^0.111.0"}
aiohttp = "^3.9.5"
loguru = "^0.7.2"
keycloak = "^3.1.4"
psycopg2-binary = "^2.9.9"
fastapi-pagination = "^0.12.24"
asyncpg = "^0.29.0"
requests = "^2.31.0"
celery = "^5.4.0"
pip = "^24.0"
install = "^1.3.5"
python-keycloak = "^4.0.0"
greenlet = "^3.0.3"
minio = "^7.2.7"
aiofiles = "^23.2.1"
isort = "^5.13.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"
aioboto3 = "^12.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
